      green) or the browns (i.e. ochre, brown), so they will always be the
      outcome of some alchemy combinations.
* More formal identification for items under certain circumstances:
    - Formal ID tin whistles and magic whistles when used.
    - Formal ID magic flutes and magic harps when used.
    - Formal ID enchant armor scrolls when they turn dragon scales into dragon
      scale mail.
* Guarantee a wand of cancellation in the Castle chest that can be used for
  blanking scrolls and potions.
* The shield of reflection now weighs 50 (was 75) due to the introduction of the
  new shield skill.
* Wielding or unwielding a weapon of stealth identifies the stealth property on
  that weapon and gives identifying messages similar to wearing other items that
  grant stealth.
* Hitting a monster with a weapon of stealth identifies the stealth property on
  that weapon, and also gives a message that you "silently hit" or "silently
  kill" the monster, hinting at how weapons of stealth bypass the usual combat
  noise mechanic.
* Improve stacking of random candles by removing random chance of them being
  blessed or cursed (from AceHack).  Between wax and tallow candles, and
  blessed, uncursed and cursed status, an inventory could be filled with 6
  different candle stacks, even with DynaHack's improved item stacking!
* Grant +1 to-hit for all short swords.
* Allow knife and stiletto as possible tin-opening tools (from K-Mod).
* The "magical" prefix on items is only omitted once all properties on it have
  been identified instead of once any of them have been, making it easier to
  discover items that have more than one property.
* Fix prefixes like "magical" and "prize" not appearing on rings, wands,
  spellbooks and iron balls under certain circumstances.
* Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen
  monster and it hits a door."
* Fix wielding of a cockatrice corpse bare-handed while wearing chromatic dragon